# wibotic-ros-can-connector

./: LICENSE  README.md
wibotic_connector_can/: CMakeLists.txt  package.xml  setup.py
wibotic_connector_can/launch/: wibotic_connector_can.launch
wibotic_connector_can/src/wibotic_connector_can/: __init__.py  wiboticros.py
wibotic_connector_can/src/wibotic_connector_can/uavcan_v0/uavcan_vendor_specific_types/wibotic/: 20203.RadioBaseStation.uavcan
wibotic_connector_can/src/wibotic_connector_can/uavcan_v1/dsdl/dsdl_wibotic/: IncomingSerial.1.0.dsdl  OutgoingSerial.1.0.uavcan  RadioBaseStation.1.0.uavcan  WiBoticInfo.1.0.dsdl
wibotic_connector_can/src/wibotic_connector_can/uavcan_vendor_specific_types/wibotic/: 20200.WiBoticInfo.uavcan  20201.WiBoticCommand.uavcan  20202.WiBoticRead.uavcan
wibotic_msg/: CMakeLists.txt  package.xml
wibotic_msg/msg/: WiBoticInfo.msg
wibotic_msg/srv/: ListParameters.srv  ReadParameter.srv  WriteParameter.srv
